--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon backend.js"
+    "dev": "nodemon backend.js",
+    "start": "node backend.js"
   },
   "author": "",
   "license": "ISC",
