--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "dummy",
   "main": "backend.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon backend.js",
     "start": "node backend.js"
   },
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.2",
     "nodemon": "^2.0.15"
   }
