--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "jest": "^27.5.1",
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.2",
