--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
