--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -22,7 +23,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.4",
-    "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "validator": "^13.7.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
