--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
@@ -18,7 +19,7 @@
     "express-fileupload": "^1.3.1",
     "jest": "^27.5.1",
     "mongodb-memory-server": "^8.4.0",
-    "mongoose": "^6.2.2",
+    "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
   }
 }
