--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "backend.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon backend.js",
+    "dev": "nodemon server.js",
     "start": "node backend.js"
   },
   "author": "",
