--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon server.js",
-    "start": "node backend.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
