--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-fileupload": "^1.3.1",
+    "http-errors": "^2.0.0",
     "jest": "^27.5.1",
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.4",
