--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-asyncify": "^1.0.1",
     "express-fileupload": "^1.3.1",
     "http-errors": "^2.0.0",
     "jest": "^27.5.1",
