--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -20,6 +21,7 @@
     "express-fileupload": "^1.3.1",
     "http-errors": "^2.0.0",
     "jest": "^27.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
