--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,8 @@
     "mongodb-memory-server": "^8.4.0",
     "mongoose": "^6.2.4",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
